--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .home-inner {
-  background-image: url(img/computers.png);
+  background-image: url(img/Adowa-dance.png);
 }
 
 .caption {
