--- a/css/fixed.css
+++ b/css/fixed.css
@@ -70,4 +70,4 @@ margin-right: 0px!important;
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
   will-change: transform;
-}
+}/
